Add parameter parsing with docopt
THIS WILL OVERRIDE YOUR FILES!!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["don <don@0xbeef.org>"]
 
 [dependencies]
 getopts = "0.2.10"
+docopt = "*"
+rustc-serialize = "*"
 
 [[bin]]
 name = "echo"
