--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,7 @@ path = "src/true/true.rs"
 [[bin]]
 name = "base64"
 path = "src/base64/base64.rs"
+
+[[bin]]
+name = "ddate"
+path = "src/ddate/ddate.rs"
